--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2><a href="https://www.pwr.edu.pl" target="blank_">Wrocław University of Science and Technology</a></h2>
    </div>
    <div style="margin-left:auto; margin-right:0;">
-    <a href="https://www.kft.pwr.edu.pl" target="blank_"><img src="files/itp.png" alt="PWr" style="height:65px; padding-left:10x; padding-right:10px;"></a>
+    <a href="https://www.kft.pwr.edu.pl" target="blank_"><img src="files/itp.png" alt="KFT" style="height:65px; padding-left:10x; padding-right:10px;"></a>
     <a href="https://www.pwr.edu.pl" target="blank_"><img src="files/pwr.png" alt="PWr" style="height:75px; padding-left:10x; padding-right:10px;"></a>
    </div>
   </div> <!-- headertab -->
@@ -193,6 +193,34 @@
      </div>
     </div>
    </p>
+   <p style="margin-bottom:10px; margin-top:10px;">
+    <b>&#9900; High-performance computing resources:</b>
+   </p>
+   <p>
+    <div class="twotab">
+     <div style="width:250px;">
+      <a href="https://www.wcss.pl/en/" target="blank_"><img src="files/wcss.png" style="width:220px;"></a>
+     </div>
+     <div>
+      <a href="https://www.wcss.pl/en/" target="blank_">Wrocław Centre for Networking and Supercomputing (WCSS)</a>
+      <br>since 2020
+     </div>
+    </div>
+   </p>
+   <p>
+    <div class="twotab">
+     <div style="width:250px;">
+      <a href="https://oit.utk.edu/hpsc/" target="blank_"><img src="files/utk.png" style="width:220px;"></a>
+     </div>
+     <div>
+      <a href="https://oit.utk.edu/hpsc/" target="blank_">ISAAC Next Generation cluster, University of Tennessee</a>
+      <br>since 2020
+     </div>
+    </div>
+   </p>
+   <p style="margin-bottom:10px; margin-top:10px;">
+    <b>&#9900; Past support:</b>
+   </p>
    <p>
     <div class="twotab">
      <div style="width:250px;">
@@ -218,57 +246,34 @@
      </div>
     </div>
    </p>
-   <p style="margin-top:30px;">
-    <b>&#9900; Other resources:</b>
-   </p>
-   <p>
-    <div class="twotab">
-     <div style="width:250px;">
-      <a href="https://www.wcss.pl/en/" target="blank_"><img src="files/wcss.png" style="width:220px;"></a>
-     </div>
-     <div>
-      <a href="https://www.wcss.pl/en/" target="blank_">Wrocław Centre for Networking and Supercomputing (WCSS)</a>
-      <br>The high-performance computing resources provided by WCSS cluster.
-      <br>since 2020, Wrocław University of Science and Technology, Poland
-     </div>
-    </div>
-   </p>
-   <p>
-    <div class="twotab">
-     <div style="width:250px;">
-      <a href="https://oit.utk.edu/hpsc/" target="blank_"><img src="files/utk.jpg" style="width:220px;"></a>
-     </div>
-     <div>
-      <a href="https://oit.utk.edu/hpsc/" target="blank_">University of Tennessee, Knoxville, USA (UTK)</a>
-      <br>The high-performance computing resources provided by UTK ISAAC Next Generation cluster.
-      <br>since 2020, University of Tennessee, Knoxville, USA
-     </div>
-    </div>
-   </p>
    <div class="divend"></div>
   </div> <!-- funding -->
 <!------------------------------------------------------------------->
   <div class="publications" id="nav-publications">
    <h3>&emsp;&#9702; publications </h3>
    <p class="headallpub">
-    &emsp;&#9900; <a href="#nav-publications" onclick="ncn2024()">
-     see only publications supported by <img src="files/svg/ncn2024.svg"> <font color="#FF3600">NCN SONATA BIS 13 2023/50/E/ST3/00033</font></a> 
-    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2020()">
-     see only publications supported by <img src="files/svg/ncn2020.svg"> <font color="#2394B2">NCN OPUS 18 2019/35/B/ST3/01207</font></a> 
-    <br>&emsp;&#9900; <a href="#nav-publications" onclick="nawa2019()">
-     see only publications supported by <img src="files/svg/nawa2019.svg"> <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font></a> 
+    See <b>only</b> publications supported by:
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2024()"><img src="files/svg/ncn2024.svg"> <font color="#FF3600">NCN SONATA BIS 13 2023/50/E/ST3/00033</font> (2024-2029)</a> 
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2020()"><img src="files/svg/ncn2020.svg"> <font color="#2394B2">NCN OPUS 18 2019/35/B/ST3/01207</font> (2020-2023)</a> 
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="nawa2019()"><img src="files/svg/nawa2019.svg"> <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font> (2019-2022)</a> 
    </p>
    <p class="headncn2024">
-    &emsp;&#9900; <a onclick="allpub()">see <b>all</b> publications</a><br><br>
-    <b>List of publications supported by <img src="files/svg/ncn2024.svg"> <font color="#FF3600">NCN SONATA BIS 13 2023/50/E/ST3/00033</font></a>:</b>
+    &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
+    <b>Publications supported by</b> <img src="files/svg/ncn2024.svg"> <font color="#FF3600">NCN SONATA BIS 13 2023/50/E/ST3/00033</font> <b>(2024-2029)</b></a>:
    </p>
    <p class="headncn2020">
-    &emsp;&#9900; <a onclick="allpub()">see <b>all</b> publications</a><br><br>
-    <b>List of publications supported by <img src="files/svg/ncn2020.svg"> <font color="#2394B2">NCN OPUS 18 2019/35/B/ST3/01207</font></a>:</b>
+    &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
+    <b>Publications supported by</b> <img src="files/svg/ncn2020.svg"> <font color="#2394B2">NCN OPUS 18 2019/35/B/ST3/01207</font> <b>(2020-2023)</b></a>:
    </p>
    <p class="headnawa2019">
-    &emsp;&#9900; <a onclick="allpub()">see <b>all</b> publications</a><br><br>
-    <b>List of publications supported by <img src="files/svg/nawa2019.svg"> <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font></a>:</b>
+    &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
+    <b>Publications supported by</b> <img src="files/svg/nawa2019.svg"> <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font> <b>(2019-2022)</b></a>:
+   </p>
+   <p class="ncn2024">
+    (preprint) <img src="files/svg/ncn2024.svg"> 
+    <b>Doping S=1 antiferromagnet in one-dimension</b>
+    <br>J. Prokopczyk and <u>J. Herbrych</u>
+    <br><a href="http://arxiv.org/abs/2508.XXXXX" target="blank_">arXiv: cond-mat/2508.XXXXX</a>
    </p>
    <p class="allpub">
     (preprint) 
@@ -667,12 +672,10 @@
   var vnawa2019 = document.getElementsByClassName("nawa2019");
   var vncn2020 = document.getElementsByClassName("ncn2020");
   var vncn2024 = document.getElementsByClassName("ncn2024");
-  var vmsca2026 = document.getElementsByClassName("msca2026");
   var vheadallpub = document.getElementsByClassName("headallpub");
   var vheadnawa2019 = document.getElementsByClassName("headnawa2019");
   var vheadncn2020 = document.getElementsByClassName("headncn2020");
   var vheadncn2024 = document.getElementsByClassName("headncn2024");
-  var vheadmsca2026 = document.getElementsByClassName("headmsca2026");
   function hideTag(tagName) {
    for(let i=0;i<tagName.length;i++){
     tagName[i].style.display = 'none'
@@ -684,13 +687,11 @@
    } 
   }
   function allpub() {
-   showTag(vmsca2026)
    showTag(vncn2024)
    showTag(vncn2020)
    showTag(vnawa2019)
    showTag(vall)
 
-   hideTag(vheadmsca2026)
    hideTag(vheadncn2024)
    hideTag(vheadncn2020)
    hideTag(vheadnawa2019)
@@ -698,55 +699,36 @@
   }
   function nawa2019() {
    hideTag(vall)
-   hideTag(vmsca2026)
    hideTag(vncn2024)
    hideTag(vncn2020)
    showTag(vnawa2019)
 
    hideTag(vheadallpub)
-   hideTag(vheadmsca2026)
    hideTag(vheadncn2024)
    hideTag(vheadncn2020)
    showTag(vheadnawa2019)
   }
   function ncn2020() {
    hideTag(vall)
-   hideTag(vmsca2026)
    hideTag(vncn2024)
    hideTag(vnawa2019)
    showTag(vncn2020)
 
    hideTag(vheadallpub)
-   hideTag(vheadmsca2026)
    hideTag(vheadncn2024)
    hideTag(vheadnawa2019)
    showTag(vheadncn2020)
   }
   function ncn2024() {
    hideTag(vall)
-   hideTag(vmsca2026)
    hideTag(vncn2020)
    hideTag(vnawa2019)
    showTag(vncn2024)
 
    hideTag(vheadallpub)
-   hideTag(vheadmsca2026)
    hideTag(vheadncn2020)
    hideTag(vheadnawa2019)
    showTag(vheadncn2024)
-  }
-  function msca2026() {
-   hideTag(vall)
-   hideTag(vncn2024)
-   hideTag(vncn2020)
-   hideTag(vnawa2019)
-   showTag(vmsca2026)
-
-   hideTag(vheadallpub)
-   hideTag(vheadncn2024)
-   hideTag(vheadncn2020)
-   hideTag(vheadnawa2019)
-   showTag(vheadmsca2026)
   }
  </script>
 <!------------------------------------------------------------------->
