--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
   const height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
   window.addEventListener('scroll', () => {
    const scrollTop = document.body.scrollTop || document.documentElement.scrollTop;
-   scrollProgress.style.width = `${(scrollTop / height) * 100}%`;
+   scrollProgress.style.width = `${(scrollTop / (height-30)) * 100}%`;
   });
  </script>
 <!------------------------------------------------------------------->
