--- a/index.html
+++ b/index.html
@@ -270,6 +270,12 @@
     &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
     <b>Publications supported by</b> <img src="files/svg/nawa2019.svg"> <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font> <b>(2019-2022)</b></a>:
    </p>
+   <p class="ncn2024">
+    (preprint) <img src="files/svg/ncn2024.svg"> 
+    <b>Doping S=1 antiferromagnet in one-dimension</b>
+    <br>J. Prokopczyk and <u>J. Herbrych</u>
+    <br><a href="http://arxiv.org/abs/2508.07712" target="blank_">arXiv: cond-mat/2508.07712</a>
+   </p>
    <p class="allpub">
     (preprint) 
     <b>Revisiting boundary-driven method for transport: Finite-size effects and the role of system-bath coupling</b>
