--- a/moth/index.html
+++ b/moth/index.html
@@ -34,6 +34,12 @@
    style="width: 100%; height: 410px; border: none;" 
    sandbox="allow-scripts allow-same-origin allow-popups">
   </iframe>
+  <p style="margin-top:5vmin;"><h3 style="text-transform: uppercase; letter-spacing: 0.2rem;">Associated Partners</h3></p>
+  <div style="margin-top:5vmin;">
+   <a href="https://physics.utk.edu" target="blank_"><img style="height:125px; margin-right:5vmin;" src="logos/ap/utk.png"></a>
+   <a href="https://www.pks.mpg.de" target="blank_"><img style="height:125px; margin-right:5vmin;" src="logos/ap/mpiks.png"></a>
+   <a href="https://www.tus.ac.jp/en/grad/ri/app_phy.html" target="blank_"><img style="height:125px;" src="logos/ap/tus.png"></a>
+ </div>
  </section> <!-- preamble -->
   <secction class="parallax" data-parallax="group">
     <div data-parallax="layer" data-parallax-speed="base"></div>
