--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
       <a href="https://ncn.gov.pl/?language=en" target="blank_">National Science Centre (NCN)</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=595177" target="blank_">SONATA BIS 13 2023/50/E/ST3/00033</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=595177" target="blank_"><em>Properties of low-dimensional quantum systems with charge, spin, and orbital degrees of freedom</em></a>
-      <br>2024 - 2029, Wrocław University of Science and Technology, Poland
+      <br>Principal Investigator, 2024 - 2029
+      <br>Wrocław University of Science and Technology, Poland
      </div>
     </div>
    </p>
@@ -231,7 +232,8 @@
       <a href="https://ncn.gov.pl/?language=en" target="blank_">National Science Centre (NCN)</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=462377" target="blank_">OPUS 18 2019/35/B/ST3/01207</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=462377" target="blank_"><em>Magnetic properties  of strongly correlated multi-orbital systems</em></a>
-      <br>2020 - 2023, Wrocław University of Science and Technology, Poland
+      <br>Principal Investigator, 2020 - 2023
+      <br>Wrocław University of Science and Technology, Poland
      </div>
     </div>
    </p>
@@ -243,7 +245,8 @@
      <div>
       <a href="https://nawa.gov.pl/en/" target="blank_">Polish National Agency for Academic Exchange (NAWA)</a>
       <br><a href="https://polskiepowroty.pl" target="blank_">Polish Returns PPN/PPO/2018/1/00035</a>
-      <br>2019 - 2022, Wrocław University of Science and Technology, Poland
+      <br>Principal Investigator, 2019 - 2022
+      <br>Wrocław University of Science and Technology, Poland
      </div>
     </div>
    </p>
