--- a/moth/index.html
+++ b/moth/index.html
@@ -15,11 +15,16 @@
  </header>
 <!-- -->
  <section id="preamble" class="uplayer" data-parallax="preamble">
-  <img src="logos/moth.gif" style="width:200px;">
-  <p><u><b>M</b>ulti<b>O</b>rbital systems: <b>T</b>raining and <b>H</b>orizons</u> (<strong>MOTH</strong>) Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lacinia elit eleifend, laoreet risus ut, sodales ipsum. Etiam aliquam accumsan diam, at consequat urna volutpat ac. Aenean eu odio dignissim, sagittis lorem non, hendrerit nibh. Sed lobortis aliquet porttitor. Morbi eu velit sit amet libero vulputate aliquet. Etiam luctus augue vitae lectus vulputate, a vehicula ante dictum. Etiam tempus interdum pharetra. Nam id posuere felis. Phasellus vel hendrerit nisl. Cras vel venenatis orci. Nam interdum magna ut blandit tempus. Nam id quam in lorem mollis dapibus vel vitae justo. Proin id lorem venenatis, sodales nulla a, tempus tellus.</p>
-  <p>In porta dui et sapien scelerisque, non sodales magna rhoncus. Nullam eget velit finibus diam elementum sagittis in non mi. Aliquam vehicula massa vitae sem venenatis auctor. Nam sed iaculis mauris. Proin molestie a sapien id sodales. Suspendisse justo nisi, suscipit ut tempor sed, sagittis vel erat. Sed hendrerit congue tincidunt. Aenean eleifend, erat vel pulvinar mollis, urna nisl rhoncus ipsum, ut rhoncus dui purus ac velit.</p>
-  <p>Nam non felis congue mauris fermentum viverra. Cras augue risus, auctor in sollicitudin vel, dictum quis dui. Vivamus maximus ex sapien, vel convallis quam auctor ut. Praesent lorem tortor, tempor quis dignissim nec, gravida non metus. Suspendisse aliquam libero a tincidunt faucibus. Aliquam sit amet turpis vel ex tempor ullamcorper. Proin ullamcorper risus non dui placerat, at luctus quam consequat.</p>
-  <div class="stack">
+  <div style="display: flex; margin-top:5vmin; align-items: center;">
+   <img src="logos/moth.gif" style="height:200px;">
+  </div>
+  <div>
+   <img src="logos/msca.png" style="height:150px; float:right; margin-left:10px;">
+   <p><u><b>M</b>ulti<b>O</b>rbital systems: <b>T</b>raining and <b>H</b>orizons</u> (<strong>MOTH</strong>) Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lacinia elit eleifend, laoreet risus ut, sodales ipsum. Etiam aliquam accumsan diam, at consequat urna volutpat ac. Aenean eu odio dignissim, sagittis lorem non, hendrerit nibh. Sed lobortis aliquet porttitor. Morbi eu velit sit amet libero vulputate aliquet. Etiam luctus augue vitae lectus vulputate, a vehicula ante dictum. Etiam tempus interdum pharetra. Nam id posuere felis. Phasellus vel hendrerit nisl. Cras vel venenatis orci. Nam interdum magna ut blandit tempus. Nam id quam in lorem mollis dapibus vel vitae justo. Proin id lorem venenatis, sodales nulla a, tempus tellus. Cras vel venenatis orci. Nam interdum magna ut blandit tempus. Nam id quam in lorem mollis dapibus vel vitae justo. Proin id lorem venenatis, sodales nulla a, tempus tellus.</p>
+   <p>In porta dui et sapien scelerisque, non sodales magna rhoncus. Nullam eget velit finibus diam elementum sagittis in non mi. Aliquam vehicula massa vitae sem venenatis auctor. Nam sed iaculis mauris. Proin molestie a sapien id sodales. Suspendisse justo nisi, suscipit ut tempor sed, sagittis vel erat. Sed hendrerit congue tincidunt. Aenean eleifend, erat vel pulvinar mollis, urna nisl rhoncus ipsum, ut rhoncus dui purus ac velit.</p>
+   <p>Nam non felis congue mauris fermentum viverra. Cras augue risus, auctor in sollicitudin vel, dictum quis dui. Vivamus maximus ex sapien, vel convallis quam auctor ut. Praesent lorem tortor, tempor quis dignissim nec, gravida non metus. Suspendisse aliquam libero a tincidunt faucibus. Aliquam sit amet turpis vel ex tempor ullamcorper. Proin ullamcorper risus non dui placerat, at luctus quam consequat.</p>
+  </div>
+  <div class="stack" style="margin-top:2vmin">
    <img src="map/map.png" class="layermap">
    <img src="map/map_us.png" class="layermap">
    <img src="map/map_uz.png" class="layermap">
