--- a/moth/index.html
+++ b/moth/index.html
@@ -81,7 +81,7 @@
    </div>
   </secction>
 <!-- -->
-  <aside class="foot" data-parallax="none"><small><strong>M</strong>ulti<strong>O</strong>rbital systems: <strong>T</strong>raining and <strong>H</strong>orizons <strong>(MOTH)</strong> Marie Skłodowska-Curie Actions - 2025 Doctoral Networks (MSCA-DN)</small></aside>
+  <aside class="foot" data-parallax="none"><small><strong>M</strong>ulti<strong>O</strong>rbital systems: <strong>T</strong>raining and <strong>H</strong>orizons (<strong>MOTH</strong>) Marie Skłodowska-Curie Actions - 2025 Doctoral Networks (MSCA-DN)</small></aside>
 </div> <!-- container -->
 <script src="script.js" defer></script>
 <script>
