--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <title>Jacek Herbrych - Wrocław University of Science and Technology</title>
  <link rel="stylesheet" media="screen" href="style.css">
 </head>
-<body id="particles-js">
+<body>
 <!------------------------------------------------------------------->
  <div class="header">
   <div class="headertab">
@@ -644,9 +644,6 @@
 <!------------------------------------------------------------------->
  </div> <!-- content -->
 <!------------------------------------------------------------------->
- <div class="footer-particleinfo">
-  <a href="https://vincentgarreau.com/particles.js/" target="_blank">particles.js by Vincent Garreau</a> 
- </div> <!-- footer-particleinfo -->
  <div class="footer">
   <b>Jacek Herbrych</b> &emsp;&emsp;&emsp; Wrocław University of Science and Technology &emsp;&emsp;&emsp; Last update:
   <script language="JavaScript">
@@ -656,8 +653,6 @@
   </script>
  </div> <!-- footer -->
 <!------------------------------------------------------------------->
- <script src="particles/particles.js"></script>
- <script src="particles/particles-style.js"></script>
  <script>
   var header = document.getElementById("navigation");
   var btns = header.getElementsByClassName("btn");
