--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
    <p>
     <b>&#9900; Group</b>
     <br>&emsp;&#9900; (phd) Mateusz Lisiecki - <em>Doping of Kitaev-Heisenberg model</em>
+    <span style="vertical-align:-35%;"> </span>
     <br>&emsp;&#9900; (master) Julia Koczorowska - <em>Spin excitations in Kitaev ladder</em>
     <br>&emsp;&#9900; (master) Jakub Prokopczyk - <em>Orthogonal finite-temperature Lanczos method: application to the t-J-Kitaev model</em>
     <br>&emsp;&#9900; (master) Błażej Zdobylak - <em>Entanglement & correlations between charge and spin degrees of freedom</em>
+    <span style="vertical-align:-35%;"> </span>
     <br>&emsp;&#9900; (diploma) Jagoda Maląg - <em>Local fluctuations within quantum circuits</em>
     <br>&emsp;&#9900; (diploma) Jakub Wawruszczak - <em>Dynamics of monitored quantum systems</em>
     <br>&emsp;&#9900; (diploma) Jagoda Zawisz - <em>Effective spin exchanges in multi-orbital Hubbard model</em>
@@ -84,8 +86,10 @@
    <p>
     <b>&#9900; Past</b>
     <br>&emsp;&#9900; (2023 phd) <a href="http://www.maksymiliansroda.pl" target="_blank">Maksymilian Środa</a> - <em>Electronic and magnetic properties of low-dimensional multiorbital systems</em>
+    <span style="vertical-align:-35%;"> </span>
     <br>&emsp;&#9900; (2021 master) Rafał Świętek - <em>Exact diagonalization studies of generalized Kondo-Heisenberg model</em>
     <br>&emsp;&#9900; (2021 master) Łukasz Iwanek - <em>Many-body mobility edge in random-exchange systems</em>
+    <span style="vertical-align:-35%"> </span>
     <br>&emsp;&#9900; (2025 diploma) Jakub Prokopczyk - <em>Spin dynamics of doped two-orbital Hubbard model</em>
     <br>&emsp;&#9900; (2025 diploma) Błażej Zdobylak - <em>Particle expansion in tight-binding quantum chaotic system</em>
     <br>&emsp;&#9900; (2024 diploma) Kacper Drabikowski - <em>Correlation lengths within orbital-selective Mott phase</em>
