--- a/index.html
+++ b/index.html
@@ -187,24 +187,54 @@
    <p>
     <div class="twotab">
      <div style="width:250px;">
-      <a href="https://ncn.gov.pl/?language=en" target="blank_"><img src="files/ncn.png" style="width:230px;"></a>
+      <a href="https://ncn.gov.pl/?language=en" target="blank_"><img src="files/ncn.png" style="height:75px;"></a>
      </div>
      <div>
-      <a href="https://ncn.gov.pl/?language=en" target="blank_">National Science Centre (NCN)</a>
-      <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=595177" target="blank_">SONATA BIS 13 2023/50/E/ST3/00033</a>
+      <a href="https://ncn.gov.pl/?language=en" target="blank_" style="font-weight: 500;">National Science Centre (NCN)</a>
+      <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=595177" target="blank_" style="font-weight: 500;">SONATA BIS 13 2023/50/E/ST3/00033</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=595177" target="blank_"><em>Properties of low-dimensional quantum systems with charge, spin, and orbital degrees of freedom</em></a>
       <br>Principal Investigator, 2024 - 2029
       <br>Wrocław University of Science and Technology, Poland
      </div>
     </div>
    </p>
-   <p style="margin-bottom:10px; margin-top:30px;">
+   <p style="margin-bottom:10px; margin-top:20px;">
+   <b>&#9900; Past support:</b>
+   </p>
+   <p>
+    <div class="twotab">
+     <div style="width:250px;">
+      <a href="https://ncn.gov.pl/?language=en" target="blank_"><img class="grayscale" src="files/ncn.png" style="height:75px;"></a>
+     </div>
+     <div>
+      <a href="https://ncn.gov.pl/?language=en" target="blank_" style="font-weight: 500;">National Science Centre (NCN)</a>
+      <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=462377" target="blank_" style="font-weight: 500;">OPUS 18 2019/35/B/ST3/01207</a>
+      <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=462377" target="blank_"><em>Magnetic properties  of strongly correlated multi-orbital systems</em></a>
+      <br>Principal Investigator, 2020 - 2023
+      <br>Wrocław University of Science and Technology, Poland
+     </div>
+    </div>
+   </p>
+   <p>
+    <div class="twotab">
+     <div style="width:250px";>
+      <a href="https://nawa.gov.pl/en/" target="blank_"><img class="grayscale" src="files/nawa.png" style="height:75px;"></a>
+     </div>
+     <div>
+      <a href="https://nawa.gov.pl/en/" target="blank_" style="font-weight: 500;">Polish National Agency for Academic Exchange (NAWA)</a>
+      <br><a href="https://polskiepowroty.pl" target="blank_" style="font-weight: 500;">Polish Returns PPN/PPO/2018/1/00035</a>
+      <br>Principal Investigator, 2019 - 2022
+      <br>Wrocław University of Science and Technology, Poland
+     </div>
+    </div>
+   </p>
+   <p style="margin-bottom:10px; margin-top:20px;">
     <b>&#9900; High-performance computing resources:</b>
    </p>
    <p>
     <div class="twotab">
      <div style="width:250px;">
-      <a href="https://www.wcss.pl/en/" target="blank_"><img src="files/wcss.png" style="width:220px;"></a>
+      <a href="https://www.wcss.pl/en/" target="blank_"><img src="files/wcss.png" style="height:75px;"></a>
      </div>
      <div>
       <a href="https://www.wcss.pl/en/" target="blank_">Wrocław Centre for Networking and Supercomputing (WCSS)</a>
@@ -215,41 +245,11 @@
    <p>
     <div class="twotab">
      <div style="width:250px;">
-      <a href="https://oit.utk.edu/hpsc/" target="blank_"><img src="files/utk.png" style="width:220px;"></a>
+      <a href="https://oit.utk.edu/hpsc/" target="blank_"><img src="files/utk.png" style="width:250px;"></a>
      </div>
      <div>
       <a href="https://oit.utk.edu/hpsc/" target="blank_">ISAAC Next Generation cluster, University of Tennessee</a>
       <br>since 2020
-     </div>
-    </div>
-   </p>
-   <p style="margin-bottom:10px; margin-top:30px;">
-    <b>&#9900; Past support:</b>
-   </p>
-   <p>
-    <div class="twotab">
-     <div style="width:250px;">
-      <a href="https://ncn.gov.pl/?language=en" target="blank_"><img class="grayscale" src="files/ncn.png" style="width:230px;"></a>
-     </div>
-     <div>
-      <a href="https://ncn.gov.pl/?language=en" target="blank_">National Science Centre (NCN)</a>
-      <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=462377" target="blank_">OPUS 18 2019/35/B/ST3/01207</a>
-      <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=462377" target="blank_"><em>Magnetic properties  of strongly correlated multi-orbital systems</em></a>
-      <br>Principal Investigator, 2020 - 2023
-      <br>Wrocław University of Science and Technology, Poland
-     </div>
-    </div>
-   </p>
-   <p>
-    <div class="twotab">
-     <div style="width:250px";>
-      <a href="https://nawa.gov.pl/en/" target="blank_"><img class="grayscale" src="files/nawa.png" style="width:220px;"></a>
-     </div>
-     <div>
-      <a href="https://nawa.gov.pl/en/" target="blank_">Polish National Agency for Academic Exchange (NAWA)</a>
-      <br><a href="https://polskiepowroty.pl" target="blank_">Polish Returns PPN/PPO/2018/1/00035</a>
-      <br>Principal Investigator, 2019 - 2022
-      <br>Wrocław University of Science and Technology, Poland
      </div>
     </div>
    </p>
