--- a/index.html
+++ b/index.html
@@ -260,21 +260,21 @@
    <h3>&emsp;&#9702; publications </h3>
    <p class="headallpub">
     See <b>only</b> publications supported by:
-    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2024()"><img src="files/svg/ncn2024.svg"> <font color="#FF3600">NCN SONATA BIS 13 2023/50/E/ST3/00033</font> (2024-2029)</a> 
-    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2020()"><img src="files/svg/ncn2020.svg"> <font color="#2394B2">NCN OPUS 18 2019/35/B/ST3/01207</font> (2020-2023)</a> 
-    <br>&emsp;&#9900; <a href="#nav-publications" onclick="nawa2019()"><img src="files/svg/nawa2019.svg"> <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font> (2019-2022)</a> 
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2024()"><img src="files/svg/ncn2024.svg"> NCN SONATA BIS 13 2023/50/E/ST3/00033 (2024-2029)</a> 
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2020()"><img src="files/svg/ncn2020.svg"> NCN OPUS 18 2019/35/B/ST3/01207 (2020-2023)</a> 
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="nawa2019()"><img src="files/svg/nawa2019.svg"> NAWA Polish Returns PPN/PPO/2018/1/00035 (2019-2022)</a> 
    </p>
    <p class="headncn2024">
     &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
-    <b>Publications supported by</b> <img src="files/svg/ncn2024.svg"> <font color="#FF3600">NCN SONATA BIS 13 2023/50/E/ST3/00033</font> <b>(2024-2029)</b></a>:
+    <b>Publications supported by</b> <img src="files/svg/ncn2024.svg"> NCN SONATA BIS 13 2023/50/E/ST3/00033 (2024-2029)</a>:
    </p>
    <p class="headncn2020">
     &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
-    <b>Publications supported by</b> <img src="files/svg/ncn2020.svg"> <font color="#2394B2">NCN OPUS 18 2019/35/B/ST3/01207</font> <b>(2020-2023)</b></a>:
+    <b>Publications supported by</b> <img src="files/svg/ncn2020.svg"> NCN OPUS 18 2019/35/B/ST3/01207 (2020-2023)</a>:
    </p>
    <p class="headnawa2019">
     &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
-    <b>Publications supported by</b> <img src="files/svg/nawa2019.svg"> <font color="#67A437">NAWA Polish Returns PPN/PPO/2018/1/00035</font> <b>(2019-2022)</b></a>:
+    <b>Publications supported by</b> <img src="files/svg/nawa2019.svg"> NAWA Polish Returns PPN/PPO/2018/1/00035 (2019-2022)</a>:
    </p>
    <p class="ncn2024">
     (preprint) <img src="files/svg/ncn2024.svg"> 
