--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <br>&emsp;&#9900; 2016 - 2019 University of Tennessee (Knoxville, USA)
     <br>&emsp;&#9900; 2013 - 2016 Crete Center for Quantum Complexity and Nanotechnology (Heraklion, Greece)
     <br>&emsp;&#9900; 2013 - 2016 University of Crete (Heraklion, Greece)
-    <br>&emsp;&#9900; 2010 - 2013 Jožef Stefan Institute, Ljubljana (Ljubljana, Slovenia)
+    <br>&emsp;&#9900; 2010 - 2013 Jožef Stefan Institute (Ljubljana, Slovenia)
     <br>&emsp;&#9900; 2010 - 2013 PhD studies at University of Ljubljana (Ljubljana, Slovenia)
     <br>&emsp;&#9900; 2005 - 2010 MSc studies at University of Łódź (Łódź, Poland)
    </p>
