--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
   </div> <!-- headertab -->
   <div class="navigation" id="navigation">
    &#9679; <a href="#" class="btn active">info</a> 
-   &#9679; <a href="#nav-teaching" class="btn">teaching</a> 
    &#9679; <a href="#nav-research" class="btn">research</a> 
    &#9679; <a href="#nav-funding" class="btn">funding</a> 
    &#9679; <a href="#nav-publications" class="btn">publications</a> 
@@ -46,14 +45,14 @@
    </p>
    <h3>&emsp;&#9702; info</h3>
    <p>
-    <b>&#9900; Contact:</b> jacek.herbrych <svg xmlns="http://www.w3.org/2000/svg" width="12px" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 64C150 64 64 150 64 256s86 192 192 192c17.7 0 32 14.3 32 32s-14.3 32-32 32C114.6 512 0 397.4 0 256S114.6 0 256 0S512 114.6 512 256l0 32c0 53-43 96-96 96c-29.3 0-55.6-13.2-73.2-33.9C320 371.1 289.5 384 256 384c-70.7 0-128-57.3-128-128s57.3-128 128-128c27.9 0 53.7 8.9 74.7 24.1c5.7-5 13.1-8.1 21.3-8.1c17.7 0 32 14.3 32 32l0 80 0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-106-86-192-192-192zm64 192a64 64 0 1 0 -128 0 64 64 0 1 0 128 0z"/></svg> pwr.edu.pl<br>
-    <b>&#9900; Address:</b> Office A1.262D<br>
+    <b style="font-weight: 500;">&#9900; Contact:</b> jacek.herbrych <svg xmlns="http://www.w3.org/2000/svg" width="12px" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 64C150 64 64 150 64 256s86 192 192 192c17.7 0 32 14.3 32 32s-14.3 32-32 32C114.6 512 0 397.4 0 256S114.6 0 256 0S512 114.6 512 256l0 32c0 53-43 96-96 96c-29.3 0-55.6-13.2-73.2-33.9C320 371.1 289.5 384 256 384c-70.7 0-128-57.3-128-128s57.3-128 128-128c27.9 0 53.7 8.9 74.7 24.1c5.7-5 13.1-8.1 21.3-8.1c17.7 0 32 14.3 32 32l0 80 0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-106-86-192-192-192zm64 192a64 64 0 1 0 -128 0 64 64 0 1 0 128 0z"/></svg> pwr.edu.pl<br>
+    <b  style="font-weight: 500;">&#9900; Address:</b> Office A1.262D<br>
      &emsp;Politechnika Wrocławska<br>
      &emsp;Wyb. Stanisława Wyspiańskiego 27<br>
      &emsp;50-370 Wrocław, Poland
    </p>
    <p>
-    <b>&#9900; My appointments & education</b>
+    <b style="font-weight: 500;">&#9900; My appointments & education</b>
     <br>&emsp;&#9900; since 2019 Wrocław University of Science and Technology (Wrocław, Poland)
     <br>&emsp;&#9900; 2022 Habilitation at University of Warsaw (Warsaw, Poland)
     <br>&emsp;&#9900; 2016 - 2019 Oak Ridge National Laboratory (Oak Ridge, USA)
@@ -65,14 +64,14 @@
     <br>&emsp;&#9900; 2005 - 2010 MSc studies at University of Łódź (Łódź, Poland)
    </p>
    <p>
-     <b>&#9900; Links</b>
+     <b style="font-weight: 500;">&#9900; Links</b>
      <br>&emsp;&#9900; <a href="files/jacek_herbrych_cv.pdf" target="blank_"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="12px"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M0 64C0 28.7 28.7 0 64 0L224 0l0 128c0 17.7 14.3 32 32 32l128 0 0 144-208 0c-35.3 0-64 28.7-64 64l0 144-48 0c-35.3 0-64-28.7-64-64L0 64zm384 64l-128 0L256 0 384 128zM176 352l32 0c30.9 0 56 25.1 56 56s-25.1 56-56 56l-16 0 0 32c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-48 0-80c0-8.8 7.2-16 16-16zm32 80c13.3 0 24-10.7 24-24s-10.7-24-24-24l-16 0 0 48 16 0zm96-80l32 0c26.5 0 48 21.5 48 48l0 64c0 26.5-21.5 48-48 48l-32 0c-8.8 0-16-7.2-16-16l0-128c0-8.8 7.2-16 16-16zm32 128c8.8 0 16-7.2 16-16l0-64c0-8.8-7.2-16-16-16l-16 0 0 96 16 0zm80-112c0-8.8 7.2-16 16-16l48 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-32 0 0 32 32 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-32 0 0 48c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-64 0-64z" style="fill:rgb(68,68,68);"/></svg> full résumé (pdf)</a>
      <br>&emsp;&#9900; <a href="https://arxiv.org/search/?searchtype=all&query=herbrych&order=-submitted_date" target="blank_"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="12px"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M96 0C43 0 0 43 0 96L0 416c0 53 43 96 96 96l288 0 32 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l0-64c17.7 0 32-14.3 32-32l0-320c0-17.7-14.3-32-32-32L384 0 96 0zm0 384l256 0 0 64L96 448c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16l192 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-192 0c-8.8 0-16-7.2-16-16zm16 48l192 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-192 0c-8.8 0-16-7.2-16-16s7.2-16 16-16z" style="fill:rgb(68,68,68);"/></svg> arXiv publication list</a>
      <br>&emsp;&#9900; <a href="http://scholar.google.com/citations?hl=en&user=jeeDlpwAAAAJ" target="blank_"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="12px"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M390.9 298.5c0 0 0 .1 .1 .1c9.2 19.4 14.4 41.1 14.4 64C405.3 445.1 338.5 512 256 512s-149.3-66.9-149.3-149.3c0-22.9 5.2-44.6 14.4-64h0c1.7-3.6 3.6-7.2 5.6-10.7c4.4-7.6 9.4-14.7 15-21.3c27.4-32.6 68.5-53.3 114.4-53.3c33.6 0 64.6 11.1 89.6 29.9c9.1 6.9 17.4 14.7 24.8 23.5c5.6 6.6 10.6 13.8 15 21.3c2 3.4 3.8 7 5.5 10.5zm26.4-18.8c-30.1-58.4-91-98.4-161.3-98.4s-131.2 40-161.3 98.4L0 202.7 256 0 512 202.7l-94.7 77.1z" style="fill:rgb(68,68,68);"/></svg> Google Scholar profile</a>
      <br>&emsp;&#9900; <a href="https://github.com/jacekherbrych/DataRepository" taget="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" width="12px"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" style="fill:rgb(68,68,68);"/></svg> GitHub data repository</a>
    </p>
    <p>
-    <b>&#9900; Group</b>
+    <b style="font-weight: 500;">&#9900; Group</b>
     <br>&emsp;&#9900; (phd) Mateusz Lisiecki - <em>Doping of Kitaev-Heisenberg model</em>
     <span style="vertical-align:-35%;"> </span>
     <br>&emsp;&#9900; (master) Julia Koczorowska - <em>Spin excitations in Kitaev ladder</em>
@@ -84,7 +83,7 @@
     <br>&emsp;&#9900; (diploma) Jagoda Zawisz - <em>Effective spin exchanges in multi-orbital Hubbard model</em>
    </p>
    <p>
-    <b>&#9900; Past</b>
+    <b style="font-weight: 500;">&#9900; Past</b>
     <br>&emsp;&#9900; (2023 phd) <a href="http://www.maksymiliansroda.pl" target="_blank">Maksymilian Środa</a> - <em>Electronic and magnetic properties of low-dimensional multiorbital systems</em>
     <span style="vertical-align:-35%;"> </span>
     <br>&emsp;&#9900; (2021 master) Rafał Świętek - <em>Exact diagonalization studies of generalized Kondo-Heisenberg model</em>
@@ -101,25 +100,10 @@
    <div class="divend"></div>
   </div> <!-- info -->
 <!------------------------------------------------------------------->
-  <div class="teaching" id="nav-teaching">
-   <h3>&emsp;&#9702; teaching</h3>
-   <p>
-    <b>&#9900; Bachelor courses</b>
-    <br>&emsp;&#9900; Quantum Mechanics I & II
-    <br>&emsp;&#9900; Quantum many‐body theory
-   </p>
-   <p>
-    <b>&#9900; Master courses</b>
-    <br>&emsp;&#9900; Matrix product state representation of quantum mechanics - monographic lecture
-    <br>&emsp;&#9900; Numerical methods for quantum systems
-   </p>
-   <div class="divend"></div>
-  </div> <!-- teaching -->
-<!------------------------------------------------------------------->
   <div class="research" id="nav-research">
    <h3>&emsp;&#9702; research interest</h3>
    <p>
-    &#9900; <b>Strongly correlated multi-orbital systems</b><br>
+    &#9900; <b style="font-weight: 500;">Strongly correlated multi-orbital systems</b><br>
     Past experience in strongly correlated quantum systems, especially Cu-based materials, showed that the high-temperature superconductivity is closely connected to a bad-metal state and a nearby antiferromagnetic order. As such, there has been a considerable effort devoted to the understanding of the electron correlation effects and the associated magnetism. On the other hand, the multi-orbital system properties, relevant for Fe-based materials, are much less explored. Iron-based superconductors display various phases originating in the multi-orbital nature of iron itself, and as a consequence, in the competition between electronic, orbital, and spin degrees of freedom. Prominent among these novel effects is the orbital-selective Mott phase (OSMP), where electronic correlations cause a unique mixture of metallic and insulating behavior.
    </p>
    <p>
@@ -146,7 +130,7 @@
     </div>
    </div>
    <p style="margin-top: 30px;">
-    &#9900; <b>Transport properties in low-dimensional quantum systems</b><br>
+    &#9900; <b style="font-weight: 500;">Transport properties in low-dimensional quantum systems</b><br>
     Transport in many-body systems of interacting fermions established several novel - entirely quantum - aspects going well beyond usual weak-scattering or Boltzmann-type approaches to transport. Such behavior is especially pronounced in the system with reduced dimensionality (e.g., in 1D chains and quasi-1D ladders). Furthermore, due to the possibility of accurate treatment on the latter, the low-dimensional systems have become a playground for condensed-matter physicists to test various theoretical scenarios. A prominent fundamental model and an experimentally relevant example of such a phenomenon is the one-dimensional antiferromagnetic Heisenberg model describing the low-dimensional quantum magnets even at high temperatures.
    </p>
    <p>
@@ -172,22 +156,16 @@
      <a href="http://link.aps.org/doi/10.1103/PhysRevB.107.045134" target="blank_">Phys. Rev. B <b>107</b>, 045134 (2023)</a>
     </div>
    </div>
-   <p style="margin-top: 30px;">
-    &#9900; <b>Flocking of multi-agent dynamical systems</b><br>
-    I recently got interested in the classical multi-agent dynamical systems relevant to the collective decision-making in the biological systems, e.g., the transfer of long-range information in birds' flocks. I'm interested in the extension of the so-called <i>inertia spin model</i> to leaderless flocking.
-   </p>
    <div class="divend"></div>
   </div> <!-- research -->
 <!------------------------------------------------------------------>
   <div class="funding" id="nav-funding">
    <h3>&emsp;&#9702; funding</h3>
-   <p style="margin-bottom:10px;">
-    <b>&#9900; Research projects:</b>
-   </p>
-   <p>
+   <p style="margin-bottom:0px;">
+    <b style="font-weight: 500;">&#9900; Research projects:</b>
     <div class="twotab">
-     <div style="width:250px;">
-      <a href="https://ncn.gov.pl/?language=en" target="blank_"><img src="files/ncn.png" style="height:75px;"></a>
+     <div style="width:250px; margin-left: auto; margin-right: 0;">
+      <a href="https://ncn.gov.pl/?language=en" target="blank_"><img src="files/ncn.png" style="height:70px;"></a>
      </div>
      <div>
       <a href="https://ncn.gov.pl/?language=en" target="blank_" style="font-weight: 500;">National Science Centre (NCN)</a>
@@ -198,13 +176,11 @@
      </div>
     </div>
    </p>
-   <p style="margin-bottom:10px; margin-top:20px;">
-   <b>&#9900; Past support:</b>
-   </p>
-   <p>
+   <p style="margin-bottom:0px; margin-top:10px;">
+    <b style="font-weight: 500;">&#9900; Past support:</b>
     <div class="twotab">
-     <div style="width:250px;">
-      <a href="https://ncn.gov.pl/?language=en" target="blank_"><img class="grayscale" src="files/ncn.png" style="height:75px;"></a>
+     <div style="width:250px; margin-left: auto; margin-right: 0;">
+      <a href="https://ncn.gov.pl/?language=en" target="blank_"><img class="grayscale" src="files/ncn.png" style="height:70px;"></a>
      </div>
      <div>
       <a href="https://ncn.gov.pl/?language=en" target="blank_" style="font-weight: 500;">National Science Centre (NCN)</a>
@@ -217,8 +193,8 @@
    </p>
    <p>
     <div class="twotab">
-     <div style="width:250px";>
-      <a href="https://nawa.gov.pl/en/" target="blank_"><img class="grayscale" src="files/nawa.png" style="height:100px;"></a>
+     <div style="width:250px; margin-left: auto; margin-right: 0;">
+      <a href="https://nawa.gov.pl/en/" target="blank_"><img class="grayscale" src="files/nawa.png" style="height:90px;"></a>
      </div>
      <div>
       <a href="https://nawa.gov.pl/en/" target="blank_" style="font-weight: 500;">Polish National Agency for Academic Exchange (NAWA)</a>
@@ -228,13 +204,11 @@
      </div>
     </div>
    </p>
-   <p style="margin-bottom:10px; margin-top:20px;">
-    <b>&#9900; High-performance computing resources:</b>
-   </p>
-   <p>
+   <p style="margin-bottom:10px; margin-top:30px;">
+    <b style="font-weight: 500;">&#9900; High-performance computing resources:</b>
     <div class="twotab">
-     <div style="width:250px;">
-      <a href="https://www.wcss.pl/en/" target="blank_"><img src="files/wcss.png" style="height:75px;"></a>
+     <div style="width:250px; margin-left: auto; margin-right: 0;">
+      <a href="https://www.wcss.pl/en/" target="blank_"><img src="files/wcss.png" style="width:220px;"></a>
      </div>
      <div>
       <a href="https://www.wcss.pl/en/" target="blank_">Wrocław Centre for Networking and Supercomputing (WCSS)</a>
@@ -244,8 +218,8 @@
    </p>
    <p>
     <div class="twotab">
-     <div style="width:250px;">
-      <a href="https://oit.utk.edu/hpsc/" target="blank_"><img src="files/utk.png" style="width:250px;"></a>
+     <div style="width:250px; margin-left: auto; margin-right: 0;">
+      <a href="https://oit.utk.edu/hpsc/" target="blank_"><img src="files/utk.png" style="width:220px;"></a>
      </div>
      <div>
       <a href="https://oit.utk.edu/hpsc/" target="blank_">ISAAC Next Generation cluster, University of Tennessee</a>
@@ -295,10 +269,10 @@
     <br><a href="http://arxiv.org/abs/2505.09346" target="blank_">arXiv: cond-mat/2505.09346</a>
    </p>
    <p class="allpub">
-    (preprint) 
+    (58) 
     <b>Algorithm for finding local integrals of motion in quantum lattice models in the thermodynamic limit</b>
     <br>J. Pawłowski, <u>J. Herbrych</u>, and M. Mierzejewski
-    <br><a href="http://arxiv.org/abs/2505.05882" target="blank_">arXiv: cond-mat/2505.05882</a>
+    <br><a href="https://doi.org/10.1103/xxxx-xxxx" target="blank_">Phys. Rev. B <b>XXX</b>, XXXXXX (2025)</a>&emsp;& &emsp;<a href="http://arxiv.org/abs/2505.05882" target="blank_">arXiv: cond-mat/2505.05882</a>
    </p>
    <p class="ncn2024">
     (57) <img src="files/svg/ncn2024.svg"> 
