--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    <h3>&emsp;&#9702; info</h3>
    <p>
     <b style="font-weight: 500;">&#9900; Contact:</b> jacek.herbrych <svg xmlns="http://www.w3.org/2000/svg" width="12px" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 64C150 64 64 150 64 256s86 192 192 192c17.7 0 32 14.3 32 32s-14.3 32-32 32C114.6 512 0 397.4 0 256S114.6 0 256 0S512 114.6 512 256l0 32c0 53-43 96-96 96c-29.3 0-55.6-13.2-73.2-33.9C320 371.1 289.5 384 256 384c-70.7 0-128-57.3-128-128s57.3-128 128-128c27.9 0 53.7 8.9 74.7 24.1c5.7-5 13.1-8.1 21.3-8.1c17.7 0 32 14.3 32 32l0 80 0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-106-86-192-192-192zm64 192a64 64 0 1 0 -128 0 64 64 0 1 0 128 0z"/></svg> pwr.edu.pl<br>
-    <b  style="font-weight: 500;">&#9900; Address:</b> Office A1.262D<br>
+    <b style="font-weight: 500;">&#9900; Address:</b> Office A1.262D<br>
      &emsp;Politechnika Wrocławska<br>
      &emsp;Wyb. Stanisława Wyspiańskiego 27<br>
      &emsp;50-370 Wrocław, Poland
@@ -232,23 +232,23 @@
 <!------------------------------------------------------------------->
   <div class="publications" id="nav-publications">
    <h3>&emsp;&#9702; publications </h3>
-   <p class="headallpub">
+   <p class="headallpub" style="font-weight: 500;">
     See <b>only</b> publications supported by:
-    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2024()"><img src="files/svg/ncn2024.svg"> NCN SONATA BIS 13 2023/50/E/ST3/00033 (2024-2029)</a> 
-    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2020()"><img src="files/svg/ncn2020.svg"> NCN OPUS 18 2019/35/B/ST3/01207 (2020-2023)</a> 
-    <br>&emsp;&#9900; <a href="#nav-publications" onclick="nawa2019()"><img src="files/svg/nawa2019.svg"> NAWA Polish Returns PPN/PPO/2018/1/00035 (2019-2022)</a> 
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2024()"><img src="files/svg/ncn2024.svg"> <b>NCN SONATA BIS 13</b> 2023/50/E/ST3/00033 (2024-2029)</a> 
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="ncn2020()"><img src="files/svg/ncn2020.svg"> <b>NCN OPUS 18</b> 2019/35/B/ST3/01207 (2020-2023)</a> 
+    <br>&emsp;&#9900; <a href="#nav-publications" onclick="nawa2019()"><img src="files/svg/nawa2019.svg"> <b>NAWA Polish Returns</b> PPN/PPO/2018/1/00035 (2019-2022)</a> 
    </p>
-   <p class="headncn2024">
+   <p class="headncn2024" style="font-weight: 500;">
     &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
-    <b>Publications supported by</b> <img src="files/svg/ncn2024.svg"> NCN SONATA BIS 13 2023/50/E/ST3/00033 (2024-2029)</a>:
+    Publications supported by <img src="files/svg/ncn2024.svg"> <b>NCN SONATA BIS 13</b> 2023/50/E/ST3/00033 (2024-2029)</a>:
    </p>
-   <p class="headncn2020">
+   <p class="headncn2020" style="font-weight: 500;">
     &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
-    <b>Publications supported by</b> <img src="files/svg/ncn2020.svg"> NCN OPUS 18 2019/35/B/ST3/01207 (2020-2023)</a>:
+    Publications supported by <img src="files/svg/ncn2020.svg"> <b>NCN OPUS 18</b> 2019/35/B/ST3/01207 (2020-2023)</a>:
    </p>
-   <p class="headnawa2019">
+   <p class="headnawa2019" style="font-weight: 500;">
     &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
-    <b>Publications supported by</b> <img src="files/svg/nawa2019.svg"> NAWA Polish Returns PPN/PPO/2018/1/00035 (2019-2022)</a>:
+    Publications supported by <img src="files/svg/nawa2019.svg"> <b>NAWA Polish Returns</b> PPN/PPO/2018/1/00035 (2019-2022)</a>:
    </p>
    <p class="ncn2024">
     (preprint) <img src="files/svg/ncn2024.svg"> 
