--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <!------------------------------------------------------------------->
+ <div class="headerbackground"></div>
  <div class="header">
   <div class="headertab">
    <div style="margin-left:20px;">
