--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
    </p>
    <p class="allpub">
     (58) 
-    <b>Algorithm for finding local integrals of motion in quantum lattice models in the thermodynamic limit</b>
+    <b>Finding local integrals of motion in quantum lattice models in the thermodynamic limit</b>
     <br>J. Pawłowski, <u>J. Herbrych</u>, and M. Mierzejewski
-    <br><a href="https://doi.org/10.1103/xxxx-xxxx" target="blank_">Phys. Rev. B <b>XXX</b>, XXXXXX (2025)</a>&emsp;& &emsp;<a href="http://arxiv.org/abs/2505.05882" target="blank_">arXiv: cond-mat/2505.05882</a>
+    <br><a href="https://doi.org/10.1103/brst-wp36" target="blank_">Phys. Rev. B <b>112</b>, 155130 (2025)</a>&emsp;& &emsp;<a href="http://arxiv.org/abs/2505.05882" target="blank_">arXiv: cond-mat/2505.05882</a>
    </p>
    <p class="ncn2024">
     (57) <img src="files/svg/ncn2024.svg"> 
