--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <br>&emsp;&#9900; (master) Jakub Prokopczyk - <em>Orthogonal finite-temperature Lanczos method: application to the t-J-Kitaev model</em>
     <br>&emsp;&#9900; (master) Błażej Zdobylak - <em>Entanglement & correlations between charge and spin degrees of freedom</em>
     <span style="vertical-align:-35%;"> </span>
-    <br>&emsp;&#9900; (diploma) Jagoda Maląg - <em>Local fluctuations within quantum circuits</em>
+    <br>&emsp;&#9900; (diploma) Jagoda Maląg - <em>Time evolution of fluctuations as a measure of entropy</em>
     <br>&emsp;&#9900; (diploma) Jakub Wawruszczak - <em>Dynamics of monitored quantum systems</em>
-    <br>&emsp;&#9900; (diploma) Jagoda Zawisz - <em>Effective spin exchanges in multi-orbital Hubbard model</em>
+    <br>&emsp;&#9900; (diploma) Jagoda Zawisz - <em>Majorana fermions in strongly-correlated systems</em>
    </p>
    <p>
     <b>&#9900; Past</b>
