--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 <!------------------------------------------------------------------->
  <div class="content">
 <!------------------------------------------------------------------->
+  <div class="news" id="nav-news">
+   <p style="color: red">
+    <b style="font-weight: 500;">I'm pleased to announce two open positions for 2026: one for a PhD student and one for a postdoctoral researcher.</b> The PhD position offers a 4-year scholarship and is aimed at highly motivated candidates interested in the physics of strongly correlated electron systems. The postdoctoral position is a 2-year contract designed for applicants with a strong research background in the physics of the Hubbard model (or its variants) and numerical methods for low-dimensional quantum systems. Interested candidates are encouraged to reach out for more information and application details.
+   </p>
+  </div>
   <div class="info" id="nav-info">
    <p>
     <div class="twotabinfo">
