--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
   </div> <!-- research -->
 <!------------------------------------------------------------------>
   <div class="funding" id="nav-funding">
-   <h3>&emsp;&#9702; funding</h3>
+   <h3>&emsp;&#9702; funding & support</h3>
    <p>
-    <div class="twotab">
+    <div class="twotab" style="background: #f2f9ff">
      <div>
       <a href="https://ncn.gov.pl/?language=en" target="blank_" style="font-weight: 500;">Polish National Science Centre (NCN)</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=595177" target="blank_" style="font-weight: 500;">SONATA BIS 13 2023/50/E/ST3/00033</a>
@@ -191,7 +191,7 @@
       <br>Wrocław University of Science and Technology (Poland)
       <br>
      </div>
-     <div style="width:250px; margin-left: auto; margin-right: 0;">
+     <div style="width:250px; margin-left: auto; margin-right: 0; margin-top: 5px;">
       <a href="https://www.wcss.pl/en/" target="blank_"><img src="files/wcss.png" style="width:210px;"></a>
      </div>
     </div>
@@ -206,13 +206,13 @@
       <br>High-performance computing resources, 2019-2025
       <br>University of Tennessee (Knoxville, USA)
      </div>
-     <div style="width:250px; margin-left: auto; margin-right: 0;">
+     <div style="width:250px; margin-left: auto; margin-right: 0; margin-top: 5px;">
       <a href="https://oit.utk.edu/hpsc/" target="blank_"><img class="grayscale" src="files/utk.png" style="width:220px;"></a>
      </div>
     </div>
    </p>
    <p>
-    <div class="twotab">
+    <div class="twotab" style="background: #f2f9ff">
      <div>
       <a href="https://ncn.gov.pl/?language=en" target="blank_" style="font-weight: 500;">Polish National Science Centre (NCN)</a>
       <br><a href="https://projekty.ncn.gov.pl/en/index.php?projekt_id=462377" target="blank_" style="font-weight: 500;">OPUS 18 2019/35/B/ST3/01207</a>
