--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <b>Magnon damping and mode softening in quantum double-exchange ferromagnets</b>
     <br>A. Moreo, E. Dagotto, G. Alvarez, T. Tohyama, M. Mierzejewski, and <u>J. Herbrych</u>
     <br><a href="https://iopscience.iop.org/article/10.1088/1361-6633/add6d4" target="blank_">Rep. Prog. Phys. <b>88</b>, 068001 (2025)</a>&emsp;& &emsp;<a href="http://arxiv.org/abs/2503.01277" target="blank_">arXiv: cond-mat/2503.01277</a>
-    <br>Featured in <a href="https://physicsworld.com/a/new-mechanism-explains-behaviour-of-materials-exhibiting-giant-magnetoresistance/" target="blank_">Physics Today</a> and <a href="https://physicsworld.com/a/quantum-ferromagnets-without-the-usual-tricks/" target="blank_">Progress In series</a>
+    <br>Featured in <a href="https://physicsworld.com/a/new-mechanism-explains-behaviour-of-materials-exhibiting-giant-magnetoresistance/" target="blank_">Physics World</a> and <a href="https://physicsworld.com/a/quantum-ferromagnets-without-the-usual-tricks/" target="blank_">Progress In series</a>
    </p>
    <p class="allpub">
     (54) 
@@ -313,7 +313,7 @@
    <p class="allpub">
     (53) 
     <b>Lindblad dynamics from spatio-temporal correlation functions in nonintegrable spin-1/2 chains with different boundary conditions</b>
-    <br>M. Kraft, J. Richter, F. Jin, S. Nandy, Zala Lenarčič, <u>J. Herbrych</u>, K. Michielsen, H. De Raedt, J. Gemmer, and R. Steinigeweg
+    <br>M. Kraft, J. Richter, F. Jin, S. Nandy, Z. Lenarčič, <u>J. Herbrych</u>, K. Michielsen, H. De Raedt, J. Gemmer, and R. Steinigeweg
     <br><a href="http://link.aps.org/doi/10.1103/PhysRevResearch.6.023251" target="blank_">Phys. Rev. Res. <b>6</b>, 023251 (2024)</a>&emsp;& &emsp;<a href="http://arxiv.org/abs/2402.18177" target="blank_">arXiv: cond-mat/2402.18177</a>
    </p>
    <p class="allpub">
